# stare

./: .ackrc  .bumpversion.cfg  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  lychee.toml  pixi.toml  pyproject.toml  pytest.ini  setup.py  tbump.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  publish-package-to-pypi.yml  tag.yml
docs/: api.md  auth.md  caching.md  configuration.md  contributing.md  examples.md  getting-started.md  glance-api-feedback.md  index.md  projections.md  query-dsl.md
scripts/: extract_dsl_fields.py  extract_enums.py
snippets/: fields-analysis.md  fields-confnote.md  fields-leadgroup.md  fields-leadinggroup.md  fields-paper.md  fields-publication.md  fields-pubnote.md  fields-trigger.md
src/stare/: __init__.py  _output.py  auth.py  cli.py  client.py  commandline.py  core.py  exceptions.py  projection.py  settings.py  storage.py  typing.py  urls.py  utilities.py  version.py
src/stare/cli/: __init__.py  analysis.py  auth.py  cache.py  confnote.py  leadgroup.py  leadinggroup.py  paper.py  publications.py  pubnote.py  subgroup.py  triggers.py  utils.py
src/stare/data/: CERN_chain.pem  __init__.py  query-fields.toml  query-grammar.lark
src/stare/dsl/: __init__.py  _extractor.py  errors.py  grammar.lark  models.py  parser.py  registry.py
src/stare/dsl/data/: __init__.py  analysis_fields.toml  paper_fields.toml
src/stare/models/: __init__.py  analysis.py  auth.py  common.py  conf_note.py  confnote.py  enums.py  errors.py  paper.py  pub_note.py  pubnote.py  search.py
src/stare/settings/: __init__.py  base.py
tests/: conftest.py  test_auth.py  test_cache.py  test_cli.py  test_client.py  test_dsl_grammar.py  test_dsl_models.py  test_dsl_parser.py  test_dsl_registry.py  test_enums.py  test_enums_import.py  test_exceptions.py  test_extract_fields.py  test_models.py  test_output.py  test_projection.py  test_session.py  test_settings.py  test_storage.py  test_urls.py  test_user.py
tests/fixtures/: analysis_search.json  conf_note.json  confnote_search.json  paper_search.json  pub_note.json  pubnote_search.json
tests/integration/: test_analysis.py  test_examples.py  test_live.py  test_paper.py  test_publications.py  test_user.py
tests/integration/cassettes/: test_analysis.test_get.json  test_paper.test_get.json  test_publications.test_get.json  test_publications.test_search.json  test_user.test_user_bad_login.json  test_user.test_user_good_login.json
